--- a/index.html
+++ b/index.html
@@ -21,15 +21,30 @@
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
-  ->
+  -->
 
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
+  
 </head>
 
 <body>
+
+  <dl id="planets">
+    <dt>Sun</dt>
+    <dd>The Star of the solar system</dd>
+    <dt>Mercury</dt>
+    <dd>the first planet</dd>
+    <dt>venus</dt>
+    <dd>very poissonous gases</dd>
+    <dt>earth</dt>
+    <dd>our home</dd>
+    <dt>mars</dt>
+    <dd>the red planet</dd>
+    <dt>pluto</dt>
+    <dd>the planet not the cartoon character</dd>
+  </dl>
+
+  
 
   <div class="" id="footer">
     <p>LR Design &copy;2018</p>
